samples/_failures_safe/1761255099_e6e17f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7da710c3.c: In function ‘main’:
./samples/SAFE/__tmp_7da710c3.c:166:5: error: expected identifier or ‘(’ at end of input
  166 |     Lexer
      |     ^~~~~
./samples/SAFE/__tmp_7da710c3.c:166:5: error: expected declaration or statement at end of input
